syntax = "proto3";

import "stdlib.proto";

option java_multiple_files = true;
option java_package = "sila2.com.wega-it.common.";
option java_outer_classname = "Matrix200Proto";
option objc_class_prefix = "MTX";

package sila2.org.sila_standard.release_candidate.canAbort;

// Interface exported by the server.
service abort {
  // A simple RPC.
  //  
  rpc abort(Empty) returns (abortReply) {}  
}

// 
message abortReply {
  string status = 1; 
}

